--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 #main {
+    background-color: rgb(192, 197, 218);
     display: flex;
     border: 1px solid red;
     justify-content: center;
@@ -10,6 +11,10 @@
 #container {
     display: flex;
     flex-flow: row wrap;
+    border-left: 10px solid gray;
+    border-top: 10px solid gray;
+    border-right: 10px solid whitesmoke;
+    border-bottom: 10px solid whitesmoke;
 }
 
 .item {
@@ -55,8 +60,15 @@
     background-color: #d3d0d0;
     justify-content: center;
     align-items: center;
-    border: 2px solid black;
+    border-top: 2px solid white;
+    border-left: 2px solid white;
+    border-right: 2px solid black;
+    border-bottom: 2px solid black;
     
+}
+
+.full:hover {
+    border: 2px dotted black
 }
 
 .cell {
