--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+body {
+    margin: 0px;
+    padding: 0px;
+}
+
 #main {
     background-color: rgb(192, 197, 218);
     display: flex;
-    border: 1px solid red;
     justify-content: center;
     align-items: center;
     height: 100vh;
