--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
 
 .bomb {
     width: 100%;
-    background-image: url(/image/bomb.png);
+    background-image: url(./image/bomb.png);
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
